WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197410
REGRESSION(
r243197
): [GStreamer] Error playing redirected streams
https://bugs.webkit.org/show_bug.cgi?id=197410
Summary
REGRESSION(r243197): [GStreamer] Error playing redirected streams
Alberto Garcia
Reported
2019-04-30 05:22:22 PDT
I haven't tested it myself yet, but one Debian user reports this problem with WebKitGTK 2.24.1. Here are the steps to reproduce it: 1) Go to
http://radio.dos.nl/
2) Go to settings (drop down in right top corner) 3) Click "Choose protocol" until it shows HLS 4) Click on arrow (back to radio) 5) Click on "Page menu" (bottom left corner) and choose "news" 6) Click "France Info", network stream starts, no audio (protocol: AAC) 7) Click "France Culture": works (same protocol: AAC) This is the Debian bug report:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=928044
I had a short conversation with Michael and he thinks that the commit that caused this was
r243197
:
https://trac.webkit.org/changeset/243197/webkit
The user confirms that version 2.24.0 works fine.
Attachments
Patch
(2.16 KB, patch)
2019-05-08 03:24 PDT
,
Philippe Normand
cgarcia
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.51 MB, application/zip)
2019-05-08 05:23 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2019-05-08 02:11:31 PDT
This is not related with HLS. The player uri differs from the one reported by the httpsrc element and this statement is logged: GST_DEBUG_OBJECT(pipeline(), "Ignoring HTTP response headers for non-main URI.");
Philippe Normand
Comment 2
2019-05-08 03:24:42 PDT
Created
attachment 369369
[details]
Patch
EWS Watchlist
Comment 3
2019-05-08 05:23:21 PDT
Comment on
attachment 369369
[details]
Patch
Attachment 369369
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/12132285
New failing tests: fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html
EWS Watchlist
Comment 4
2019-05-08 05:23:23 PDT
Created
attachment 369377
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.4
Philippe Normand
Comment 5
2019-05-08 05:27:09 PDT
(In reply to Build Bot from
comment #3
)
> Comment on
attachment 369369
[details]
> Patch > >
Attachment 369369
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
https://webkit-queues.webkit.org/results/12132285
> > New failing tests: > fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html
False positive.
Philippe Normand
Comment 6
2019-05-08 08:21:22 PDT
Committed
r245054
: <
https://trac.webkit.org/changeset/245054
>
Alberto Garcia
Comment 7
2019-05-16 00:02:03 PDT
This bug is fixed now, but I got this feedback from a user: ------------------------ The bug is fixed, but there is a small (cosmetical) issue with the new 2.24.1-2 version, compared to old 2.22.7: when clicking on a HLS stream, it takes a few seconds for the radio to start playing while the old version started to play instantly. 1) Go to
http://radio.dos.nl/
2) Go to settings (drop down in right top corner) 3) Click "Choose protocol" until it shows HLS 4) Click on arrow (back to radio) 5) Click on "Page menu" (bottom left corner) and choose "news" 6) Click one of the BBC icons, e.g. "5 live" The 2.22.7 version plays immediately, the 2.24.1-2 waits a few seconds. ------------------------
Philippe Normand
Comment 8
2019-05-16 01:13:45 PDT
(In reply to Alberto Garcia from
comment #7
)
> This bug is fixed now, but I got this feedback from a user: > > ------------------------ > The bug is fixed, but there is a small (cosmetical) issue with the new > 2.24.1-2 version, compared to old 2.22.7: when clicking on a HLS > stream, it takes a few seconds for the radio to start playing while > the old version started to play instantly. > > 1) Go to
http://radio.dos.nl/
> > 2) Go to settings (drop down in right top corner) > > 3) Click "Choose protocol" until it shows HLS > > 4) Click on arrow (back to radio) > > 5) Click on "Page menu" (bottom left corner) and choose "news" > > 6) Click one of the BBC icons, e.g. "5 live" > > The 2.22.7 version plays immediately, the 2.24.1-2 waits a few seconds. > ------------------------
That's a downside of using the network-process for HLS :( Not much I can do, unfortunately.
Michael Catanzaro
Comment 9
2019-05-16 06:46:35 PDT
Really? Because the job of the network process is to load things really quickly. It shouldn't take seconds.
Philippe Normand
Comment 10
2019-05-16 06:55:26 PDT
(In reply to Michael Catanzaro from
comment #9
)
> Really? Because the job of the network process is to load things really > quickly. It shouldn't take seconds.
"A few seconds" is too vague. More investigation is needed... But what I observed here is that there was a small delay indeed, at the time I assumed it was because of the IPC between the Web and Net processes. Anyway, feel free to open a new bug :) This one is closed for good.
Michael Catanzaro
Comment 11
2019-05-16 07:27:34 PDT
(In reply to Philippe Normand from
comment #10
)
> "A few seconds" is too vague. More investigation is needed... But what I > observed here is that there was a small delay indeed, at the time I assumed > it was because of the IPC between the Web and Net processes.
It should be really small though, insignificant compared to the delay of actually doing network requests.
> Anyway, feel free to open a new bug :) This one is closed for good.
Yes, this one is fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug