REGRESSION(r243197): [GStreamer] Error playing redirected streams https://bugs.webkit.org/show_bug.cgi?id=197410

Reviewed by Carlos Garcia Campos.

Revert the change introduced in r243197 that was checking the
redirected URI instead of the original URI. Non-main URIs should
be ignored only when they are HLS (or similar) fragments.

Test http/tests/security/canvas-remote-read-remote-video-hls.html still passes.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/211833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245054 268f45cc-cd09-0410-ab3c-d52691b4dbfc